--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title>vueadmin</title>
+  <title>BETX</title>
+  <link rel="shortcut icon" href="static/favicon.ico">
 </head>
 
 <body>
